[package]
authors = ["Roberto Pintos López <roberto.pintos.lopez@gmail.com>"]
description = "Another Rust tool for syntax analysis"
edition = "2018"
keywords = ["analyzer", "compiler", "language", "lexical", "recognition"]
license-file = "LICENSE"
name = "artlr_syntax"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
